--- a/releases/stg/echoup.yaml
+++ b/releases/stg/echoup.yaml
@@ -2,21 +2,21 @@
 apiVersion: helm.fluxcd.io/v1
 kind: HelmRelease
 metadata:
-  name: echup-rc
+  name: echoup-rc
   namespace: stg
   annotations:
     fluxcd.io/automated: "true"
     filter.fluxcd.io/chart-image: glob:stg-*
 spec:
-  releaseName: echup-rc
+  releaseName: echoup-rc
   chart:
     git: git@github.com:ThreatACC/helm-operator-get-started.git 
-    path: charts/echup
+    path: charts/echoup
     ref: master
   values:
     image:
-      repository: gcr.io/fine-balm-322411/echup
-      tag: stg-9ij63o4c
+      repository: gcr.io/fine-balm-322411/echoup
+      tag: stg-cxl7ec75
     replicaCount: 2
     hpa:
       enabled: true
