--- a/charts/echoup/values.yaml
+++ b/charts/echoup/values.yaml
@@ -5,10 +5,10 @@
 replicaCount: 2
 
 image:
-  repository: gcr.io/fine-balm-322411/echo-v5
+  repository: gcr.io/fine-balm-322411/echoup
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "latest"
+  tag: ""
 
 service:
   type: ClusterIP
