--- a/hack/echo/config/default.yaml
+++ b/hack/echo/config/default.yaml
@@ -1,5 +1,5 @@
 port: 3000
 loglevel: debug
-persist: true
+persist: false
 mongodburl: mongodb://username:password@mongodb:27017/echo?authSource=admin
 dbname: echo
