--- a/releases/dev/echoup.yaml
+++ b/releases/dev/echoup.yaml
@@ -16,7 +16,7 @@ spec:
   values:
     image:
       repository: gcr.io/fine-balm-322411/echoup
-      tag: dev-5iqiwire
+      tag: dev-lm4un2gy
     replicaCount: 1
     hpa:
       enabled: false
