--- a/charts/echoup/values.yaml
+++ b/charts/echoup/values.yaml
@@ -8,7 +8,7 @@ image:
   repository: gcr.io/fine-balm-322411/echoup
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
+  tag: "latest"
 
 service:
   type: ClusterIP
